; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_uipc_mbuf.c_mcl_audit_save_mbuf.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_uipc_mbuf.c_mcl_audit_save_mbuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mbuf = type { i32 }
%struct.TYPE_4__ = type { i64 }

@AUDIT_CONTENTS_SIZE = common dso_local global i64 0, align 8
@MCA_SAVED_MBUF_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mbuf*, %struct.TYPE_4__*)* @mcl_audit_save_mbuf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mcl_audit_save_mbuf(%struct.mbuf* %0, %struct.TYPE_4__* %1) #0 {
  %3 = alloca %struct.mbuf*, align 8
  %4 = alloca %struct.TYPE_4__*, align 8
  store %struct.mbuf* %0, %struct.mbuf** %3, align 8
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %4, align 8
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = load i64, i64* @AUDIT_CONTENTS_SIZE, align 8
  %9 = icmp eq i64 %7, %8
  %10 = zext i1 %9 to i32
  %11 = call i32 @VERIFY(i32 %10)
  %12 = load %struct.mbuf*, %struct.mbuf** %3, align 8
  %13 = call i32 @_MCHECK(%struct.mbuf* %12)
  %14 = load %struct.mbuf*, %struct.mbuf** %3, align 8
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %16 = call i32 @MCA_SAVED_MBUF_PTR(%struct.TYPE_4__* %15)
  %17 = load i32, i32* @MCA_SAVED_MBUF_SIZE, align 4
  %18 = call i32 @bcopy(%struct.mbuf* %14, i32 %16, i32 %17)
  ret void
}

declare dso_local i32 @VERIFY(i32) #1

declare dso_local i32 @_MCHECK(%struct.mbuf*) #1

declare dso_local i32 @bcopy(%struct.mbuf*, i32, i32) #1

declare dso_local i32 @MCA_SAVED_MBUF_PTR(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
